--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,20 +6,22 @@
     android:layout_height="match_parent"
     android:background="#7E4545"
     tools:context=".MainActivity"
+
     tools:layout_editor_absoluteX="-109dp"
     tools:layout_editor_absoluteY="9dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/main"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        >
 
         <TextView
             android:id="@+id/customize"
             android:layout_width="193dp"
             android:layout_height="59dp"
             android:fontFamily="sans-serif-black"
-            android:text="App for you "
+            android:text="App for You "
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -65,6 +67,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.941" />
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
@@ -72,7 +76,8 @@
         android:id="@+id/Secondary"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone">
+        android:visibility="gone"
+        >
 
         <ImageButton
             android:id="@+id/DailyActivity"
@@ -97,7 +102,7 @@
             android:layout_marginTop="16dp"
             android:clickable="false"
             android:text="일상"
-
+            android:fontFamily="@font/boldfont"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.109"
             app:layout_constraintStart_toStartOf="parent"
@@ -117,19 +122,19 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.09"
             tools:srcCompat="@tools:sample/avatars" />
-
         <TextView
+            android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginTop="16dp"
             android:clickable="false"
             android:text="아픔"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:fontFamily="@font/boldfont"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.227"
-            app:layout_constraintStart_toEndOf="@+id/textView3"
-            app:layout_constraintTop_toBottomOf="@+id/Sick"
-            app:layout_constraintVertical_bias="0.024"></TextView>
+            app:layout_constraintHorizontal_bias="0.375"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/Sick"></TextView>
 
         <ImageButton
             android:id="@+id/Command"
@@ -168,6 +173,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="도음"
+            android:fontFamily="@font/boldfont"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.643"
@@ -180,18 +186,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="활동"
+            android:fontFamily="@font/boldfont"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.883"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/Entertainment"
-            app:layout_constraintVertical_bias="0.029" />
+            app:layout_constraintVertical_bias="0.029"
+    />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/Secondary1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="gone">
+            android:visibility="gone"
+           >
 
             <ImageButton
                 android:id="@+id/imgSub1"
@@ -201,7 +210,7 @@
                 android:src="@drawable/food"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.101"
+                app:layout_constraintHorizontal_bias="0.046"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.319"
@@ -254,6 +263,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="음식"
+                android:fontFamily="@font/boldfont"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.099"
@@ -266,6 +276,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="화장실"
+                android:fontFamily="@font/boldfont"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.376"
@@ -277,7 +288,7 @@
                 android:id="@+id/txtSub3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-
+                android:fontFamily="@font/boldfont"
                 android:text="옷"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -292,12 +303,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="온도"
+                android:fontFamily="@font/boldfont"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.929"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/imgSub4"
                 app:layout_constraintVertical_bias="0.047" />
+
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -369,6 +382,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="머리"
+                android:fontFamily="@font/boldfont"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.099"
@@ -381,6 +395,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="다리"
+                android:fontFamily="@font/boldfont"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.376"
@@ -392,8 +407,8 @@
                 android:id="@+id/txtSub2_3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-
                 android:text="심장"
+                android:fontFamily="@font/boldfont"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.643"
@@ -407,6 +422,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="목"
+                android:fontFamily="@font/boldfont"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.929"
@@ -484,6 +500,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="불"
+                android:fontFamily="@font/boldfont"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.099"
@@ -496,6 +513,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="정소"
+                android:fontFamily="@font/boldfont"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.376"
@@ -508,6 +526,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="장문"
+                android:fontFamily="@font/boldfont"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.643"
@@ -521,12 +540,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="벌레"
+                android:fontFamily="@font/boldfont"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.929"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/imgSub3_4"
                 app:layout_constraintVertical_bias="0.047" />
+
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -598,6 +619,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="산책"
+                android:fontFamily="@font/boldfont"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.099"
@@ -610,6 +632,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="겔임"
+                android:fontFamily="@font/boldfont"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.376"
@@ -622,6 +645,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="노래"
+                android:fontFamily="@font/boldfont"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.643"
@@ -635,6 +659,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="TV"
+                android:fontFamily="@font/boldfont"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.929"
@@ -643,8 +668,29 @@
                 app:layout_constraintVertical_bias="0.047" />
 
 
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/list_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ListView
+                android:id="@+id/listVIew"
+                style="@style/Widget.AppCompat.ListView.Menu"
+                android:visibility="gone"
+                android:layout_width="344dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.492"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.661"
+                android:background="@drawable/custom_listview_border"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
